--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -12,6 +12,7 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
+    <script src="js/libraries/p5.3D.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5.glitch@latest/p5.glitch.js"></script>
 
 
